--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "geoip-lite": "^1.4.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-share": "^5.2.2",
     "react-social-media-embed": "^2.5.18",
     "rellax": "^1.12.1",
     "scrollreveal": "^4.0.9",
